# murty

./: CMakeLists.txt  Makefile  README.md  setup.py
tests/: test_murty.py
